--- a/index.html
+++ b/index.html
@@ -1286,7 +1286,8 @@ const entries = [
     "id": 10,
     "word": "Арыы",
     "pos": "",
-    "definition": "1) тулалаан турары кытта биир кэлим көстүү буолбат, тугунан эрэ уратылаһар (хол., ортото охсуллубакка хаалбыт ходуһа) .\n2) \t даҕ. суолт. Ойдом турар; ойдом, быстах. Арыылаах алаас киэҥ иэнэ алтан отунан симэммит. «Ырыа». Алпаабыт"
+    "definition": "1) тулалаан турары кытта биир кэлим көстүү буолбат, тугунан эрэ уратылаһар (хол., ортото охсуллубакка хаалбыт ходуһа) .\n2) \t даҕ. суолт. Ойдом турар; ойдом, быстах. Арыылаах алаас киэҥ иэнэ алтан отунан симэммит. «Ырыа». Алпаабыт",
+    "image": "npk/images/10/jpg"
   },
   {
     "id": 11,
@@ -2222,3 +2223,4 @@ document.addEventListener('DOMContentLoaded', init);
 </script>
 </body>
 </html>
+
