--- a/index.html
+++ b/index.html
@@ -1216,6 +1216,8 @@ body {
   © 2025 «Электроннай тылдьыт» — словарь и песни
 </footer>
 
+<script src="js/dictionary.js"></script>
+  
 <script>
 // Обновленные данные словаря с изображениями
 const entries = [
@@ -2223,4 +2225,5 @@ document.addEventListener('DOMContentLoaded', init);
 </script>
 </body>
 </html>
+
 
