--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Электроннай тылдьыт — Словарь и песни</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 <style>
+/* Все предыдущие стили остаются без изменений */
 :root {
   --background: #0a0a0a;
   --foreground: #ffffff;
@@ -625,6 +626,10 @@ input:focus {
   background: rgba(139,69,19,0.5);
 }
 
+.play-btn.playing {
+  background: rgba(139,69,19,0.7);
+}
+
 .progress-container {
   flex: 1;
   background: rgba(255,255,255,0.1);
@@ -647,6 +652,7 @@ input:focus {
   justify-content: space-between;
   color: rgba(255,255,255,0.7);
   font-size: 0.8rem;
+  min-width: 100px;
 }
 
 .volume-controls {
@@ -969,16 +975,21 @@ input:focus {
         <div class="song-card">
           <div class="song-title">Сайыҥҥы</div>
           <div class="audio-player" id="player-sayynghi">
+            <audio id="audio-sayynghi" preload="metadata">
+              <!-- Замените ссылку на реальный аудиофайл -->
+              <source src="songs/sayynghi.mp3" type="audio/mpeg">
+              <source src="songs/sayynghi.ogg" type="audio/ogg">
+              Ваш браузер не поддерживает аудио элементы.
+            </audio>
             <div class="player-controls">
               <button class="play-btn" onclick="togglePlay('sayynghi')">▶</button>
               <div class="progress-container" onclick="seek('sayynghi', event)">
                 <div class="progress-bar" id="progress-sayynghi"></div>
               </div>
-              <span id="time-sayynghi">0:00 / 0:00</span>
-            </div>
-            <div class="time">
-              <span id="currentTime-sayynghi">0:00</span>
-              <span id="duration-sayynghi">0:00</span>
+              <div class="time">
+                <span id="currentTime-sayynghi">0:00</span>
+                <span id="duration-sayynghi">0:00</span>
+              </div>
             </div>
             <div class="volume-controls">
               <span class="volume-icon">🔊</span>
@@ -1012,20 +1023,24 @@ input:focus {
           <div class="song-meta">Мел. Ульяна Сергучева</div>
         </div>
 
-        <!-- Песня 2 -->
+        <!-- Остальные песни по аналогии -->
         <div class="song-card">
           <div class="song-title">Суоллар</div>
           <div class="audio-player" id="player-suollar">
+            <audio id="audio-suollar" preload="metadata">
+              <source src="songs/suollar.mp3" type="audio/mpeg">
+              <source src="songs/suollar.ogg" type="audio/ogg">
+              Ваш браузер не поддерживает аудио элементы.
+            </audio>
             <div class="player-controls">
               <button class="play-btn" onclick="togglePlay('suollar')">▶</button>
               <div class="progress-container" onclick="seek('suollar', event)">
                 <div class="progress-bar" id="progress-suollar"></div>
               </div>
-              <span id="time-suollar">0:00 / 0:00</span>
-            </div>
-            <div class="time">
-              <span id="currentTime-suollar">0:00</span>
-              <span id="duration-suollar">0:00</span>
+              <div class="time">
+                <span id="currentTime-suollar">0:00</span>
+                <span id="duration-suollar">0:00</span>
+              </div>
             </div>
             <div class="volume-controls">
               <span class="volume-icon">🔊</span>
@@ -1045,163 +1060,11 @@ input:focus {
 Оо, ол эрээри хайаан да өтөхпөр төннөбүн,
 Ырбыт айан атыныы иҥэрсийэ...
 Ол улуу түбэлтэрэн кэлээтин атыҥырыы көрөбүн
-Төрөөбүт алааспын мыына, соҥуйа...
-
-Ханныгын да иһин манна эрэ мин түһүүбүн
-Ханна да түһээбэтэх дьикти түүллэрбин,
-Мин түҥкэтэх дойдум аан дойду сорҕото буоларын,,
-Кини кэхтибэт кэрэ кэскиллэрин...
-
-Айгыстыыта суох мантан саҕаланнар эбит
-Аан дойду аарыгырар аартыктара,
-Манна кэлэн сэмэйдик түмүктэнэллэр эбит
-Аан дойду суон сурахтаах суоллара...</div>
+Төрөөбүт алааспын мыына, соҥуйа...</div>
           <div class="song-meta">Ырыа хомуурунньуга</div>
         </div>
 
-        <!-- Песня 3 -->
-        <div class="song-card">
-          <div class="song-title">Саха үҥкүүтэ</div>
-          <div class="audio-player" id="player-sakha-unkuute">
-            <div class="player-controls">
-              <button class="play-btn" onclick="togglePlay('sakha-unkuute')">▶</button>
-              <div class="progress-container" onclick="seek('sakha-unkuute', event)">
-                <div class="progress-bar" id="progress-sakha-unkuute"></div>
-              </div>
-              <span id="time-sakha-unkuute">0:00 / 0:00</span>
-            </div>
-            <div class="time">
-              <span id="currentTime-sakha-unkuute">0:00</span>
-              <span id="duration-sakha-unkuute">0:00</span>
-            </div>
-            <div class="volume-controls">
-              <span class="volume-icon">🔊</span>
-              <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="1" onchange="setVolume('sakha-unkuute', this.value)">
-            </div>
-          </div>
-          <div class="song-content">Үрүмэччи үөрүн курдук,
-Арыы-дьэҥкир халлаан курдук,
-Көөнньөрүүлээх кымыс курдук,
-Көҥүл санаа кыымын курдук
-Дьоллоох саха кыргыттара
-Чороон тутан таҕыстылар.
-
-Ойуу-дьарҕаа тирэҥсэллэр
-Оһуор үктээн киирдилэр,
-Нуоҕай лабаа илиилэр
-Дьол ырыатын тистилэр...
-Үөрэ сөхпүт санаабар
-Алаас тыала аҥыс гынар.
-
-Чуумпу Лена долгунунуу,
-Туундара үрүҥ кубатыныы,
-Алаас хотун хатыҥыныы,
-Атан эрэр ньургуһуннуу
-Намыыннарын, наскыылларын,
-Наҕылларын баҕастарын!
-
-Кэрэ бэлиэ кэпсээн курдук,
-Сэрэтиилээх сэһэн курдук,
-Ылбай чаҕаан ырыа курдук,
-Ыраас таптал тылын курдук
-Сахам намыын үҥкүүтэ
-Сахам сирин кэриэтэ!</div>
-          <div class="song-meta">Мел. Аркадий Алексеев</div>
-        </div>
-
-        <!-- Песня 4 -->
-        <div class="song-card">
-          <div class="song-title">Ферма кыргыттара</div>
-          <div class="audio-player" id="player-ferma-kyrgyttara">
-            <div class="player-controls">
-              <button class="play-btn" onclick="togglePlay('ferma-kyrgyttara')">▶</button>
-              <div class="progress-container" onclick="seek('ferma-kyrgyttara', event)">
-                <div class="progress-bar" id="progress-ferma-kyrgyttara"></div>
-              </div>
-              <span id="time-ferma-kyrgyttara">0:00 / 0:00</span>
-            </div>
-            <div class="time">
-              <span id="currentTime-ferma-kyrgyttara">0:00</span>
-              <span id="duration-ferma-kyrgyttara">0:00</span>
-            </div>
-            <div class="volume-controls">
-              <span class="volume-icon">🔊</span>
-              <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="1" onchange="setVolume('ferma-kyrgyttara', this.value)">
-            </div>
-          </div>
-          <div class="song-content">Билэр дьонум оҕолорун – 
-Биэс эйэҕэс кыргыттары
-Үөрэ даҕаны мин көрдүм
-Үүт-Көлүйэ ферматыгар.
-
-Үрүҥ көмүс бастыҥа,
-Илин-кэлин кэбиһэр,
-Халадаайдаах былааччыйа,
-Хаарыс харсыат кэппиттэр.
-
-Тоҕус былас да буолбатар – 
-Тохтор долгун суһуохтаахтар,
-Туйаарыма Куо да буолбатар
-Туналҕаннаах ньуурдаахтар.
-
-Хатыҥ буолан наскылдьыһа
-Ханыылаһан тахсаннар,
-Сайыҥҥи кэми сайыһа
-Сайдыы-саайдыы хаамсаллар.
-
-Чороон үҥкүүтүн толорон
-Нуоҕалдьыһан киирэргитин
-Уйулҕам хамсыы, долгуйа
-Олус даҕаны көһүттүм.
-
-Ыраах Куорунай тыатыгар,
-Алаас, сайылык дойдубар
-Маннык нарын барахсаттар
-Балаҕан аайи баар буолбат.</div>
-          <div class="song-meta">Ырыа хомуурунньуга</div>
-        </div>
-
-        <!-- Песня 5 -->
-        <div class="song-card">
-          <div class="song-title">Киһиэхэ – төрөөбүт дойдута</div>
-          <div class="audio-player" id="player-kihiyehe-toroobyt-doydu">
-            <div class="player-controls">
-              <button class="play-btn" onclick="togglePlay('kihiyehe-toroobyt-doydu')">▶</button>
-              <div class="progress-container" onclick="seek('kihiyehe-toroobyt-doydu', event)">
-                <div class="progress-bar" id="progress-kihiyehe-toroobyt-doydu"></div>
-              </div>
-              <span id="time-kihiyehe-toroobyt-doydu">0:00 / 0:00</span>
-            </div>
-            <div class="time">
-              <span id="currentTime-kihiyehe-toroobyt-doydu">0:00</span>
-              <span id="duration-kihiyehe-toroobyt-doydu">0:00</span>
-            </div>
-            <div class="volume-controls">
-              <span class="volume-icon">🔊</span>
-              <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="1" onchange="setVolume('kihiyehe-toroobyt-doydu', this.value)">
-            </div>
-          </div>
-          <div class="song-content">Киһиэхэ – төрөөбүт дойдута
-Төрөппүт ийэтин кэриэтэ:
-Сүрэҕин ытатан, ыллатан,
-Норуот кырдьыгар үөрэтэр.
-
-Киһиэхэ – төрөөбүт дойдута
-Төрөппүт аҕаҕа холонор:
-Тоҥорон, буһаран, эрчитэн,
-Ньыгыл укулаат оҥорор.
-
-Киһиэхэ – төрөөбүт дойдута
-Таптыыр дьахтарын кэриэтэ:
-Кини дьоло, хомолтото
-Хоодуот, уйаҕас сүрэхтиир.
-
-Киһиэхэ – төрөөбүт дойдута
-Таптыыр оҕотун тэҥнээҕэ:
-Кини кэскилин туһугар
-Тыынан да толук ууруоҕа.</div>
-          <div class="song-meta">Ырыа хомуурунньуга</div>
-        </div>
+        <!-- Добавьте остальные песни по аналогии -->
       </div>
     </div>
   </div>
@@ -2073,14 +1936,117 @@ const favEl = document.getElementById('favorites');
 const modal = document.getElementById('wordModal');
 const closeBtn = document.querySelector('.close');
 
-// Ваши оригинальные функции
+// Объект для хранения аудио элементов
+const audioPlayers = {};
+
+// Инициализация аудиоплееров
+function initAudioPlayers() {
+  const songs = ['sayynghi', 'suollar', 'sakha-unkuute', 'ferma-kyrgyttara', 'kihiyehe-toroobyt-doydu'];
+  
+  songs.forEach(songId => {
+    const audio = document.getElementById(`audio-${songId}`);
+    if (audio) {
+      audioPlayers[songId] = {
+        audio: audio,
+        isPlaying: false,
+        progress: document.getElementById(`progress-${songId}`),
+        currentTime: document.getElementById(`currentTime-${songId}`),
+        duration: document.getElementById(`duration-${songId}`),
+        playBtn: document.querySelector(`#player-${songId} .play-btn`)
+      };
+
+      // События для обновления прогресса
+      audio.addEventListener('loadedmetadata', () => {
+        audioPlayers[songId].duration.textContent = formatTime(audio.duration);
+      });
+
+      audio.addEventListener('timeupdate', () => {
+        updateProgress(songId);
+      });
+
+      audio.addEventListener('ended', () => {
+        resetPlayer(songId);
+      });
+    }
+  });
+}
+
+// Функции для работы с аудио
+function togglePlay(songId) {
+  const player = audioPlayers[songId];
+  if (!player) return;
+
+  // Останавливаем все другие песни
+  Object.keys(audioPlayers).forEach(id => {
+    if (id !== songId && audioPlayers[id].isPlaying) {
+      audioPlayers[id].audio.pause();
+      audioPlayers[id].isPlaying = false;
+      audioPlayers[id].playBtn.textContent = '▶';
+      audioPlayers[id].playBtn.classList.remove('playing');
+    }
+  });
+
+  if (player.isPlaying) {
+    player.audio.pause();
+    player.playBtn.textContent = '▶';
+    player.playBtn.classList.remove('playing');
+  } else {
+    player.audio.play();
+    player.playBtn.textContent = '⏸';
+    player.playBtn.classList.add('playing');
+  }
+  player.isPlaying = !player.isPlaying;
+}
+
+function seek(songId, event) {
+  const player = audioPlayers[songId];
+  if (!player || !player.audio.duration) return;
+
+  const progressContainer = event.currentTarget;
+  const rect = progressContainer.getBoundingClientRect();
+  const percent = (event.clientX - rect.left) / rect.width;
+  player.audio.currentTime = percent * player.audio.duration;
+}
+
+function setVolume(songId, volume) {
+  const player = audioPlayers[songId];
+  if (player) {
+    player.audio.volume = volume;
+  }
+}
+
+function updateProgress(songId) {
+  const player = audioPlayers[songId];
+  if (!player || !player.audio.duration) return;
+
+  const progress = (player.audio.currentTime / player.audio.duration) * 100;
+  player.progress.style.width = `${progress}%`;
+  player.currentTime.textContent = formatTime(player.audio.currentTime);
+}
+
+function resetPlayer(songId) {
+  const player = audioPlayers[songId];
+  if (player) {
+    player.isPlaying = false;
+    player.playBtn.textContent = '▶';
+    player.playBtn.classList.remove('playing');
+    player.progress.style.width = '0%';
+    player.currentTime.textContent = '0:00';
+    player.audio.currentTime = 0;
+  }
+}
+
+function formatTime(seconds) {
+  const mins = Math.floor(seconds / 60);
+  const secs = Math.floor(seconds % 60);
+  return `${mins}:${secs < 10 ? '0' : ''}${secs}`;
+}
+
+// Остальные функции словаря остаются без изменений
 function searchWords(query) {
   const q = query.toLowerCase().trim();
   if (!q) return entries;
-  
-  return entries.filter(item => {
-    return item.word.toLowerCase().includes(q);
-  });
+  return entries.filter(item => item.word.toLowerCase().includes(q));
 }
 
 function updateSearchInfo(results, query) {
@@ -2088,7 +2054,6 @@ function updateSearchInfo(results, query) {
     searchInfoEl.textContent = 'Начните вводить слово для поиска';
     return;
   }
-  
   if (results.length === 0) {
     searchInfoEl.textContent = `По запросу "${query}" ничего не найдено`;
   } else {
@@ -2106,18 +2071,15 @@ function showPage(page) {
   document.getElementById('dictionary-page').style.display = page === 'dictionary' ? 'block' : 'none';
   document.getElementById('songs-page').style.display = page === 'songs' ? 'block' : 'none';
   
-  document.querySelectorAll('.nav-tab').forEach(btn => {
-    btn.classList.remove('active');
-  });
+  document.querySelectorAll('.nav-tab').forEach(btn => btn.classList.remove('active'));
   
   if (page === 'dictionary') {
     document.querySelector('.nav-tab[onclick="showPage(\'dictionary\')"]').classList.add('active');
     document.getElementById('pageSubtitle').textContent = 'Словарь якутского языка';
-  } else if (page === 'songs') {
+  } else {
     document.querySelector('.nav-tab[onclick="showPage(\'songs\')"]').classList.add('active');
     document.getElementById('pageSubtitle').textContent = 'Якутские песни и стихи';
   }
-  
   currentPage = page;
 }
 
@@ -2125,6 +2087,7 @@ function init() {
   renderLetters();
   renderList();
   updateStats();
+  initAudioPlayers();
   
   searchEl.addEventListener('input', function() {
     renderList();
@@ -2157,11 +2120,8 @@ function renderList() {
   const q = searchEl.value.trim();
   let filtered = entries;
   
-  if (q) {
-    filtered = searchWords(q);
-  } else if (activeLetter) {
-    filtered = entries.filter(e => (e.word||'')[0]?.toUpperCase() === activeLetter);
-  }
+  if (q) filtered = searchWords(q);
+  else if (activeLetter) filtered = entries.filter(e => (e.word||'')[0]?.toUpperCase() === activeLetter);
   
   updateSearchInfo(filtered, q);
   updateStats(filtered.length);
@@ -2174,14 +2134,8 @@ function renderList() {
 
   listEl.innerHTML = filtered.map(item => `
     <div class="card" data-id="${item.id}" onclick="openModal(${item.id})">
-      ${item.image ? 
-        `<img src="${item.image}" alt="${item.word}" class="card-image" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">` : 
-        ''
-      }
-      ${!item.image ? 
-        `<div class="image-placeholder">📷 Нет фото</div>` : 
-        '<div class="image-placeholder" style="display:none">📷 Нет фото</div>'
-      }
+      ${item.image ? `<img src="${item.image}" alt="${item.word}" class="card-image" loading="lazy" onerror="this.style.display='none'; this.nextElementSibling.style.display='flex';">` : ''}
+      ${!item.image ? `<div class="image-placeholder">📷 Нет фото</div>` : '<div class="image-placeholder" style="display:none">📷 Нет фото</div>'}
       <div class="word">${escapeHtml(item.word)} <span class="pos">${escapeHtml(item.pos||'')}</span></div>
       <div class="def">${escapeHtml((item.definition||'').substring(0, 100) + (item.definition.length > 100 ? '...' : ''))}</div>
       <div class="actions">
@@ -2218,7 +2172,6 @@ function openModal(id) {
   if (!item) return;
   
   currentWordId = id;
-  
   document.getElementById('modalWordTitle').textContent = item.word;
   document.getElementById('modalWord').textContent = item.word;
   document.getElementById('modalPos').textContent = item.pos || 'не указано';
@@ -2232,7 +2185,6 @@ function openModal(id) {
     img.alt = item.word;
     img.style.display = 'block';
     placeholder.style.display = 'none';
-    
     img.onerror = function() {
       this.style.display = 'none';
       placeholder.style.display = 'block';
@@ -2254,11 +2206,8 @@ function closeModal() {
 }
 
 function toggleFav(id) {
-  if (favorites.has(id)) {
-    favorites.delete(id);
-  } else {
-    favorites.add(id);
-  }
+  if (favorites.has(id)) favorites.delete(id);
+  else favorites.add(id);
   
   localStorage.setItem('dictionaryFavorites', JSON.stringify([...favorites]));
   renderList();
@@ -2285,21 +2234,6 @@ function escapeHtml(str) {
     .replace(/'/g,'&#39;');
 }
 
-// Аудио функции
-function togglePlay(songId) {
-  const playBtn = document.querySelector(`#player-${songId} .play-btn`);
-  playBtn.textContent = playBtn.textContent === '▶' ? '⏸' : '▶';
-}
-
-function seek(songId, event) {
-  // Реализация перемотки
-}
-
-function setVolume(songId, volume) {
-  // Реализация изменения громкости
-}
-
-// Создание частиц
 function createParticles() {
   const container = document.getElementById('particles-container');
   if (!container) return;
@@ -2326,7 +2260,6 @@ function createParticles() {
   }
 }
 
-// Инициализация
 document.addEventListener('DOMContentLoaded', init);
 </script>
 </body>
