--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@ input:focus {
           <div class="song-meta">Мел. Ульяна Сергучева</div>
         </div>
 
-        <!-- Остальные песни по аналогии -->
+        <!-- Песня 2 -->
         <div class="song-card">
           <div class="song-title">Суоллар</div>
           <div class="audio-player" id="player-suollar">
@@ -1061,6 +1061,319 @@ input:focus {
 Ырбыт айан атыныы иҥэрсийэ...
 Ол улуу түбэлтэрэн кэлээтин атыҥырыы көрөбүн
 Төрөөбүт алааспын мыына, соҥуйа...</div>
+          <div class="song-meta">Ырыа хомуурунньуга</div>
+        </div>
+
+        <!-- Песня 3 -->
+        <div class="song-card">
+          <div class="song-title">Саха үҥкүүтэ</div>
+          <div class="audio-player" id="player-sakha-unkuute">
+            <audio id="audio-sakha-unkuute" preload="metadata">
+              <source src="songs/sakha-unkuute.mp3" type="audio/mpeg">
+              <source src="songs/sakha-unkuute.ogg" type="audio/ogg">
+              Ваш браузер не поддерживает аудио элементы.
+            </audio>
+            <div class="player-controls">
+              <button class="play-btn" onclick="togglePlay('sakha-unkuute')">▶</button>
+              <div class="progress-container" onclick="seek('sakha-unkuute', event)">
+                <div class="progress-bar" id="progress-sakha-unkuute"></div>
+              </div>
+              <div class="time">
+                <span id="currentTime-sakha-unkuute">0:00</span>
+                <span id="duration-sakha-unkuute">0:00</span>
+              </div>
+            </div>
+            <div class="volume-controls">
+              <span class="volume-icon">🔊</span>
+              <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="1" onchange="setVolume('sakha-unkuute', this.value)">
+            </div>
+          </div>
+          <div class="song-content">Үрүмэччи үөрүн курдук,
+Арыы-дьэҥкир халлаан курдук,
+Көөнньөрүүлээх кымыс курдук,
+Көҥүл санаа кыымын курдук
+Дьоллоох саха кыргыттара
+Чороон тутан таҕыстылар.
+
+Ойуу-дьарҕаа тирэҥсэллэр
+Оһуор үктээн киирдилэр,
+Нуоҕай лабаа илиилэр
+Дьол ырыатын тистилэр...
+
+Үөрэ сөхпүт санаабар
+Алаас тыала аҥыс гынар.
+
+Чуумпу Лена долгунунуу,
+Туундара үрүҥ кубатыныы,
+Алаас хотун хатыҥыныы,
+Атан эрэр ньургуһуннуу
+Намыыннарын, наскыылларын,
+Наҕылларын баҕастарын!
+
+Кэрэ бэлиэ кэпсээн курдук,
+Сэрэтиилээх сэһэн курдук,
+Ылбай чаҕаан ырыа курдук,
+Ыраас таптал тылын курдук
+Сахам намыын үҥкүүтэ
+Сахам сирин кэриэтэ!</div>
+          <div class="song-meta">Мел. Аркадий Алексеев</div>
+        </div>
+
+        <!-- Песня 4 -->
+        <div class="song-card">
+          <div class="song-title">Ферма кыргыттара</div>
+          <div class="audio-player" id="player-ferma-kyrgyttara">
+            <audio id="audio-ferma-kyrgyttara" preload="metadata">
+              <source src="songs/ferma-kyrgyttara.mp3" type="audio/mpeg">
+              <source src="songs/ferma-kyrgyttara.ogg" type="audio/ogg">
+              Ваш браузер не поддерживает аудио элементы.
+            </audio>
+            <div class="player-controls">
+              <button class="play-btn" onclick="togglePlay('ferma-kyrgyttara')">▶</button>
+              <div class="progress-container" onclick="seek('ferma-kyrgyttara', event)">
+                <div class="progress-bar" id="progress-ferma-kyrgyttara"></div>
+              </div>
+              <div class="time">
+                <span id="currentTime-ferma-kyrgyttara">0:00</span>
+                <span id="duration-ferma-kyrgyttara">0:00</span>
+              </div>
+            </div>
+            <div class="volume-controls">
+              <span class="volume-icon">🔊</span>
+              <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="1" onchange="setVolume('ferma-kyrgyttara', this.value)">
+            </div>
+          </div>
+          <div class="song-content">Билэр дьонум оҕолорун – 
+Биэс эйэҕэс кыргыттары
+Үөрэ даҕаны мин көрдүм
+Үүт-Көлүйэ ферматыгар.
+
+Үрүҥ көмүс бастыҥа,
+Илин-кэлин кэбиһэр,
+Халадаайдаах былааччыйа,
+Хаарыс харсыат кэппиттэр.
+
+Тоҕус былас да буолбатар – 
+Тохтор долгун суһуохтаахтар,
+Туйаарыма Куо да буолбатар
+Туналҕаннаах ньуурдаахтар.
+
+Хатыҥ буолан наскылдьыһа
+Ханыылаһан тахсаннар,
+Сайыҥҥы кэми сайыһа
+Сайдыы-сайдыы хаамсаллар.
+
+Чороон үҥкүүтүн толорон
+Нуоҕалдьыһан киирэргитин
+Уйулҕам хамсыы, долгуйа
+Олус даҕаны көһүттүм.
+
+Ыраах Куорунай тыатыгар,
+Алаас, сайылык дойдубар
+Маннык нарын барахсаттар
+Балаҕан аайы баар буолбат.</div>
+          <div class="song-meta">Ырыа хомуурунньуга</div>
+        </div>
+
+        <!-- Песня 5 -->
+        <div class="song-card">
+          <div class="song-title">Киһиэхэ – төрөөбүт дойдута</div>
+          <div class="audio-player" id="player-kihiyehe-toroobyt-doydu">
+            <audio id="audio-kihiyehe-toroobyt-doydu" preload="metadata">
+              <source src="songs/kihiyehe-toroobyt-doydu.mp3" type="audio/mpeg">
+              <source src="songs/kihiyehe-toroobyt-doydu.ogg" type="audio/ogg">
+              Ваш браузер не поддерживает аудио элементы.
+            </audio>
+            <div class="player-controls">
+              <button class="play-btn" onclick="togglePlay('kihiyehe-toroobyt-doydu')">▶</button>
+              <div class="progress-container" onclick="seek('kihiyehe-toroobyt-doydu', event)">
+                <div class="progress-bar" id="progress-kihiyehe-toroobyt-doydu"></div>
+              </div>
+              <div class="time">
+                <span id="currentTime-kihiyehe-toroobyt-doydu">0:00</span>
+                <span id="duration-kihiyehe-toroobyt-doydu">0:00</span>
+              </div>
+            </div>
+            <div class="volume-controls">
+              <span class="volume-icon">🔊</span>
+              <input type="range" class="volume-slider" min="0" max="1" step="0.1" value="1" onchange="setVolume('kihiyehe-toroobyt-doydu', this.value)">
+            </div>
+          </div>
+          <div class="song-content">Киһиэхэ – төрөөбүт дойдута
+Төрөппүт ийэтин кэриэтэ
+:
+Сүрэҕин ытатан, ыллатан,
+Норуот кырдьыгар үөрэтэр.
+
+Киһиэхэ – төрөөбүт дойдута
+Төрөппүт аҕаҕа холонор
+:
+Тоҥорон, буһаран, эрчитэн,
+Ньыгыл укулаат оҥорор.
+
+Киһиэхэ – төрөөбүт дойдута
+Таптыыр дьахтарын кэриэтэ
+:
+Кини дьоло, хомолтото
+Хоодуот, уйаҕас сүрэхтиир.
+
+Киһиэхэ – төрөөбүт дойдута
+Таптыыр оҕотун тэҥнээҕэ
+:
+Кини кэскилин туһугар
+Тыынан да толук ууруоҕа.</div>
+          <div class="song-meta">Ырыа хомуурунньуга</div>
+        </div>
+
+        <!-- Песня 6 -->
+        <div class="song-card">
+          <div class="song-title">Бу тыллар буолбатах – кубалар</div>
+          <div class="song-content">Бу тыллар буолбатах – кубалар.
+Сааскылыы таптаһар кубалар,
+Ып-ыраас, муус маҥан кубалар
+Санньыардык, нарыннык дайаллар
+Бу тыллар буолбатах – сарыаллар.
+
+Кыраман сааскы күөх саҕахпар
+Сандаарар ылааҥы сарыаллар
+Сайаҕас дууһаҕа сырдыыллар.
+
+Бу тыллар буолбатах – ырыалар,
+Таптаабыт сүрэхтэн саҕыллар,
+Абылыы, долгута дуорайар
+Айыы-хаан тып-тыыннаах ырыалар.</div>
+          <div class="song-meta">Ырыа хомуурунньуга</div>
+        </div>
+
+        <!-- Песня 7 -->
+        <div class="song-card">
+          <div class="song-title">Доҕоччугуом, тоҕо маннык?..</div>
+          <div class="song-content">Доҕоччугуом, тоҕо маннык
+Тоҥкурууннук  көрсөн,
+Туохтан дууһаҥ туоххаһыйан
+Чоҕулуччу көрдүн?..
+
+Миигиттэн дуу хоргутаҥҥын
+Үөрэ тоһуйбатыҥ,
+Тугу мин туора туттаммын
+Маннык киэр хайыстыҥ?..
+
+Ыар буруйдаах буоллахпына,
+Муҥатына  ааттыам; 
+Буруйа да суоҕум иһин
+Буруйдаахтыы туттуом...
+
+Хаарыан дьиэм хараҥаччыта,
+Халлаан курдук халыйыый; 
+Үрүҥ дьиэм үрүмэччитэ,
+Үөрэн-көтөн кэлиий?..</div>
+          <div class="song-meta">Ырыа хомуурунньуга</div>
+        </div>
+
+        <!-- Песня 8 -->
+        <div class="song-card">
+          <div class="song-title">Доҕоруом, дабай күөх сыырдаргын</div>
+          <div class="song-content">Доҕоруом, дабай күөх сыырдаргын,
+Мырааҥҥа көрүс күн тахсыытын.
+Эн өрүү инники сырдыыгын,
+Эн өрүү сүрэхпэр ыллыыгын.
+
+Хараҥа кэрэ да киэһэлэр...
+Халлааҥҥа сулустар хойдоллор
+:
+Эйигин, эйигин кинилэр
+Этэргэ, кэпсииргэ дылылар.
+
+Сылаас тыал иэдэспин бигиирин
+Эн тыыныҥ кэлэр дии саныыбын,
+Өрүллэр сүүрүктэр тыастарын
+Эн көмүс куоласкар холуубун.
+
+Доҕоруом, дабай күөх сыырдаргын,
+Мырааҥҥа көрүс күн тахсыытын.
+Эн өрүү инники сырдыыгын,
+Ол иһин, ол иһин таптыыбын.</div>
+          <div class="song-meta">Ырыа хомуурунньуга</div>
+        </div>
+
+        <!-- Песня 9 -->
+        <div class="song-card">
+          <div class="song-title">Эрэн миэхэ</div>
+          <div class="song-content">Эрэн миэхэ,
+Эрэн миэхэ...
+Эрэн илиим эрчимигэр,
+Эрэн сүрэҕим төлөнүгэр,
+Эрэн санаам сайыныгар.
+
+Ханнык да ыар охсууну,
+Ханнык да ыар сохсону
+Эйигиттэн халбарытыам,
+Эһиэм, уоттуом, барчалыам.
+
+Эн барыҥый муннуккар
+Күн мичээрин түһэриэм,
+Санньыппакка, салгыбакка,
+Эн сүрэххин ириэриэм.
+
+Эйигин олох албыныттан,
+Эрэн, экчи арчылыам.
+Уонна санаам сайынынан
+Киэҥ аартыкка таһаарыам...
+Эрэн илиим эрчимигэр,
+Эрэн сүрэҕим төлөнүгэр,
+Эрэн санаам сайыныгар.
+
+Экчи эрэн,
+Эрэн миэхэ.
+
+Оччоҕо 
+Эмньик күүстэниэм,
+Иэйэр
+Эдэр сүрэхтэниэм,
+Күн күлүмэ өйдөнүөм.
+
+Эрэн миэхэ.
+Эрэн!</div>
+          <div class="song-meta">Мел. Күннэй</div>
+        </div>
+
+        <!-- Песня 10 -->
+        <div class="song-card">
+          <div class="song-title">Күһүн</div>
+          <div class="song-content">Хайдах эрэ туспатык
+Миигин өрүү долгутар
+Күһүҥҥү тыам нап-намыын
+Куру-һары чуумпута.
+
+Көтөҕөтө түспүт тыа
+Курууһуба курдук сэндэ,
+Ол тыа устун туос сатыы
+Тыаһа суох хаамар бэрдин.
+
+Эн атаҕыҥ анныгар
+Көбүөр – көмүс көтөҕө,
+Уһун дьогдьоот салгына
+Эн сүрэҕин көтөҕөр.
+
+Сайыҥҥилыы чуопчаара
+Онно чыычаах ыллаабат,
+Ол эрээри дууһаҕар
+Ырыа ааспат-арахпат.
+
+Толоон, тыа, маар – барыта
+Кэҥээбиккэ дылы дуу?
+Манна киһи санаата
+Эмиэ сырдык, киэҥ, холку.
+
+...Кырдьар сааспар мин маннык
+Холку, намыын буолларбын.
+Саллар сааспын туоламмын
+Номоҕоннук сыттарбын!
+
+Хайдах эрэ туспатык
+Миигин өрүү долгутар
+Күһүҥҥү тыам нап-намыын
+Куру-һары чуумпута.</div>
           <div class="song-meta">Ырыа хомуурунньуга</div>
         </div>
 
