--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Электроннай тылдьыт — Словарь и песни</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📚</text></svg>">
 <style>
 :root {
   --background: #0a0a0a;
@@ -940,7 +941,7 @@ input:focus {
     <div id="songs-page" style="display: none;">
       <div class="songs-container">
         <div class="search-container mb-6">
-          <input id="songs-search" class="search-input" placeholder="🔍 Поиск по названию или тексту песни..." />
+          <input id="songs-search" class="search-input" placeholder="🔍 Поиск по названию песни..." />
           <button class="search-button" onclick="clearSongsSearch()">×</button>
         </div>
         <div class="text-white-70 text-sm mb-4 text-center" id="songsSearchInfo">
